# livestreamer

./: .gitignore  CMakeLists.txt
cmake/: FindFFmpeg.cmake
install/lib/: librtmp.so.1
install/lib/pkgconfig/: x264.pc
install/sbin/: rtmpgw  rtmpsrv  rtmpsuck
src/: CBaseCameraSurface.cpp  CBaseCameraSurface.h  RtmpPushLibrtmp.cpp  RtmpPushLibrtmp.h  aac_encoder.cpp  aac_encoder.h  audiocapture.cpp  audiocapture.h  commondef.h  imagesettings.cpp  main.cpp  mainview.cpp  mainview.h  mainwindow.cpp  mainwindow.h  swresample.cpp  video_encodeff.cpp  video_encodeff.h
ui/: mainview.ui
